--- a/api-server/package.json
+++ b/api-server/package.json
@@ -22,6 +22,7 @@
     "express": "^5.0.0-alpha.7",
     "google-auth-library": "^5.10.1",
     "googleapis": "^48.0.0",
+    "mongodb": "^3.5.5",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
     "tsc-watch": "^4.2.3",
